:memo: add: 問題 1-1 の追加, 数理論理学の章を追加

--- a/psets.sty
+++ b/psets.sty
@@ -14,6 +14,7 @@
 \definecolor{forestgreen}{RGB}{34,139,34}
 \definecolor{mediumvioletred}{RGB}{199,21,133}
 \definecolor{orangered}{RGB}{255,69,0}
+\definecolor{darkmagenta}{RGB}{139,0,139}
 
 \usepackage{tcolorbox}
 \tcbuselibrary{raster,skins,breakable}
@@ -25,7 +26,7 @@
 \usepackage{bm}
 \usepackage{datetime2}
 \usepackage{empheq}
-
+\usepackage{bussproofs}
 % === 全体汎用 ===
 
 %0埋め2桁数字に変換
