--- a/psets.tex
+++ b/psets.tex
@@ -60,12 +60,13 @@
 % 本文
 \begin{document}
 \pgs{自習用数学問題集}% 章立てページ
-この資料は, 自習用の数学問題集です. 証明問題に比重を置いています. 易しくはありません.\\
+この資料は, 自習用の数学問題集です. 教科書の理論を追っていくような証明問題に比重を置いています. 易しくはありません.\\
 問題の順番に規則性はほとんどなく, 分野はごっちゃ, 難易度順に並んでいるわけでもありません. ただし, 後の問題で使うような知識が前半に来ないように編集していく予定です.
-
+最終的には, これ一つで数学の基礎内容を包含できればと夢見ています.
 数学記号や用語の定義は, 教科書ごとに著しく差があれば問題文中で定義しますが, 多くの教科書で使われているものは一々定義することはありません.
 
 また, この問題集の解答が正しい保証はありません. 参考にする場合は気を付けてください.
+\include{psets_mathmatical_logic} % 数理論理学
 \include{psets_set} % 集合
 \include{psets_algebra} % 代数学
 \include{psets_topology} % 位相
