--- a/psets_algebra.tex
+++ b/psets_algebra.tex
@@ -215,7 +215,7 @@ $g(0) = 0$ かつ $\forall n \in \bm{N},\ g(\sigma (n)) = f^{'}(f(\sigma (n))) =
 \begin{nmprob}
 自然数の加法
 \makeatletter\tagsleft@true\makeatother
-\pbenumex{
+\pbenumex[Nplus]{
 問\ref{sec:algebra}-\ref{pname:peanouq} より, $m \in \bm{N}$ のとき,
 
 \begin{align}
@@ -245,6 +245,78 @@ $g(0) = 0$ かつ $\forall n \in \bm{N},\ g(\sigma (n)) = f^{'}(f(\sigma (n))) =
 \end{align*}
 より, $h$ は条件 (A1)$_{\sigma (m)}$ (A2)$_{\sigma (m)}$ を満たす. よって, $f_{\sigma (m)}$ の一意性より $f_{\sigma (m)} = \sigma \circ f_m$ となるから
 $\sigma (m) + n = f_{\sigma (m)}(n) = \sigma (f_m(n)) = \sigma (m + n)$ となる.
+}
+\hspace{-3zw}{\color{orangered}●●\ 加法のイメージ\ ●●}
+\begin{figure}[htbp]
+    \centering
+    \begin{tikzpicture}
+        \coordinate (O);       
+        \node (A0) at ($(O) + (0, 1)$) {$0$};
+        \node (B0) at ($(O) + (0, -1)$) {$m$};
+        \node (A1) at ($(A0) + (2, 0)$) {$\sigma (0)$};
+        \node (B1) at ($(B0) + (2, 0)$) {$\sigma (m)$};
+        \node (A2) at ($(A1) + (2, 0)$) {$\ldots$};
+        \node (B2) at ($(B1) + (2, 0)$) {$\ldots$};
+        \node (A3) at ($(A2) + (2, 0)$) {$n$};
+        \node (B3) at ($(B2) + (2, 0)$) {$m + n$};
+        \node (A4) at ($(A3) + (2, 0)$) {$\sigma (n)$};
+        \node (B4) at ($(B3) + (2, 0)$) {$\sigma (m + n)$};
+
+        \draw [|->] (A0) to node [above] {$\sigma$} (A1);
+        \draw [|->] (A1) to node [above] {$\sigma$} (A2);
+        \draw [|->] (A2) to node [above] {$\sigma$} (A3);
+        \draw [|->] (A3) to node [above] {$\sigma$} (A4);
+        \draw [|->] (B0) to node [below] {$\sigma$} (B1);
+        \draw [|->] (B1) to node [below] {$\sigma$} (B2);
+        \draw [|->] (B2) to node [below] {$\sigma$} (B3);
+        \draw [|->] (B3) to node [below] {$\sigma$} (B4);
+        \draw [bend right,distance=10,->] (A0) to node [left] {$f_m$} (B0);
+        \draw [bend right,distance=10,->] (A1) to node [left] {$f_m$} (B1);
+        \draw [bend right,distance=10,->] (A3) to node [left] {$f_m$} (B3);
+        \draw [bend right,distance=10,->] (A4) to node [left] {$f_m$} (B4);
+    \end{tikzpicture}
+    \caption{加法のイメージ}
+\end{figure}
+
+\makeatletter\tagsleft@false\makeatother
+\end{nmprob}
+
+
+
+\begin{nmprob}
+\makeatletter\tagsleft@true\makeatother
+自然数の加法の交換律と結合律.
+\pbenumex{
+空でない集合 $G$ に $G \times G$ から $G$ への 1 つの写像（$G$ 上の（二項）演算という） $*$ \footnote[1]{記号 $*$ が二項演算を表すとき, $*$ はしばしば乗法（演算）とよばれる.}が与えられたとする.
+$\langle a , b\rangle \in G \times G$ の $*$ による像を $a*b$ と表す\footnote[2]{厳密には, $(a*b)$ と表し, 一番外側の括弧を省略してもよいこととする. 後の問題でわかるように, $*$ が結合的であれば, 全ての括弧を省略することが可能である.}
+ことにして, 次の条件 (G1) を満たすとき,
+$*$ は結合律を満たす, あるいは結合的であるという.
+\begin{align}
+& \forall a, b, c \in G,\ (a * b) * c =  a * (b * c) & & (\text{結合律})\tag*{\hspace{3zw}(G1)}\\
+\intertext{また, 空でない集合 $G$ 上のある二項演算 $*$ が結合律を満たすとき $\langle G, * \rangle$ は半群であるという.\newline
+さらに, $\langle G, * \rangle$ が半群であり, さらに条件 (G2) を満たすとき, $\langle G, * \rangle$ はモノイドであるという.}
+& \exists e \in G,\ \forall a \in G,\ e * a = a * e = a \tag*{\hspace{3zw}(G2)}
+\intertext{条件 (G2) によって存在する $e \in G$ を $G$ の $*$ に関する単位元という.\newline
+また, 二項演算 $*$ が次の条件を満たすとき, $*$ は交換律を満たす, あるいは可換であるといい, $*$ が可換かつ $\langle G, *\rangle$ が半群のとき, $\langle G, *\rangle$ を可換半群とよぶ.
+同様にモノイドの場合は可換モノイドという.}
+& \forall a, b \in G,\ a * b = b * a & &  (\text{交換律}) \tag*{}
+\end{align}
+}{
+\item $\forall m, n\in \bm{N}$ に対して, 問\ref{sec:algebra}-\ref{pname:Nplus}\ における $f_m(n)$ を像とする写像は $\bm{N}$ 上の二項演算となり, これを $+$ で表すこととする.
+\footnote[3]{記号 $+$ が二項演算とき, $+$ はしばしば加法（演算）とよばれる.}
+$\langle \bm{N}, +\rangle$ が可換モノイドであることを示せ.
+}{
+\item 問\ref{sec:algebra}-\ref{pname:Nplus}\ (1), (4) より, $\bm{N}$ の加法に単位元 $0$ が存在する.
+よって, 加法が結合律と交換律を満たすことを示せばよい.
+\begin{enumerate}
+    \item 交換律\\
+    任意の $n \in \bm{N}$ を一つとり, $S = \{ m \in \bm{N}\ |\ m + n = n + m\}$ とする.\\
+    $\bm{N}$ の加法に関して単位元が存在することから, $0 \in S$ となる.
+    また $m \in S$ と仮定すると, $m + n = n + m$ となり, 問\ref{sec:algebra}-\ref{pname:Nplus}\ (2), (4) より,
+    $\sigma (m) + n = \sigma (m + n) = \sigma (n + m) = n + \sigma (m)$ となるから $m \in S \implies \sigma (m) \in S$ が成り立つ.
+    よって, 問\ref{sec:algebra}-\ref{pname:peano}\ (1) とから $S = \bm{N}$ が成り立つ. 今, $n$ は任意にとっているので, $\forall m, n\in \bm{N},\ m + n = n + m$ が成り立つ.
+    \item 結合律
+\end{enumerate}
 }
 \makeatletter\tagsleft@false\makeatother
 \end{nmprob}
