:memo: add: 問題 1-1,2,3, 3-11 の追加

--- a/psets_algebra.tex
+++ b/psets_algebra.tex
@@ -608,3 +608,22 @@ $1 \leq {n_0}^{'}$ となる. よって, ${n_0}^{'} \neq 0$ であり, ${n_0}^{'
 \item (4) と同様に $1 \leq k \leq {n_0}^{'}$ で $k \in S^{'}$ とすると, $k \leq {n_0}^{'} < n_0 \leq k$ で矛盾することから, $S = \bm{Z}^+$ となる.
 } 
 \end{nmprob}
+
+
+
+\begin{nmprob}
+\makeatletter\tagsleft@true\makeatother
+群の定義, 一般結合法則
+\pbenumex{
+空でない集合 $G$ と $G$ 上の二項演算（$*$ とする）が与えられ, $\langle G, *\rangle$ がモノイドであり, さらに次の条件 (G3) を満たすとき, $\langle G, *\rangle$ は群であるという.
+\begin{align}
+    & & \forall a \in G,\ \exists b \in G,\ a*b = b*a = e & & \text{($e$ は $G$ の $*$ に関する単位元)} \tag*{\hspace{3zw}(G3)}
+\end{align}
+また, $*$ が交換律を満たすとき, $\langle G, *\rangle$ は可換群という.
+}{
+\item tt
+}{
+\item tt
+}
+\makeatletter\tagsleft@false\makeatother
+\end{nmprob}
