:memo: add 問題 3-12

--- a/psets_algebra.tex
+++ b/psets_algebra.tex
@@ -636,3 +636,15 @@ $x \in (C\backslash B) \backslash A$ または $x \in A \cap B \cap C$ となる
 }
 \makeatletter\tagsleft@false\makeatother
 \end{nmprob}
+
+
+
+\begin{nmprob}
+指数表記.
+\pbenum{
+\item $\langle G, *\rangle$ を半群とする. $a_1a_2a_3 \cdots a_n \coloneqq (((a_1a_2)a_3)\cdots a_n)$ と定義する.\\
+制作中
+}{
+\item 制作中
+}
+\end{nmprob}
